[gd_scene load_steps=2 format=3 uid="uid://c75p2ndiwra5g"]

[ext_resource type="Script" path="res://src/scenes/menus/collision_property.gd" id="1_mcovr"]

[node name="CollisionProperty" type="VBoxContainer"]
offset_right = 312.0
offset_bottom = 66.0
size_flags_horizontal = 3
script = ExtResource("1_mcovr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CollisionNumber" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="DeleteButton" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "DELETE"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Nothing" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="X" type="Label" parent="GridContainer"]
layout_mode = 2
text = "X"

[node name="Y" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Y"

[node name="Pos2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Pos:"

[node name="PosX" type="SpinBox" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -200.0
max_value = 200.0

[node name="PosY" type="SpinBox" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -200.0
max_value = 200.0

[node name="Size" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Size:"

[node name="SizeX" type="SpinBox" parent="GridContainer"]
layout_mode = 2
max_value = 200.0

[node name="SizeY" type="SpinBox" parent="GridContainer"]
layout_mode = 2
max_value = 200.0

[connection signal="pressed" from="CenterContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="value_changed" from="GridContainer/PosX" to="." method="generate_properties"]
[connection signal="value_changed" from="GridContainer/PosY" to="." method="generate_properties"]
[connection signal="value_changed" from="GridContainer/SizeX" to="." method="generate_properties"]
[connection signal="value_changed" from="GridContainer/SizeY" to="." method="generate_properties"]
